--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,7 @@
                         <li class="{% if (activeMenu is defined and activeMenu == 'delaiTraitement') %} active{% endif %}"><a href="{{ path('indicateurs_delai_traitement_homepage') }}">Délai</a></li>
                         <li class="{% if (activeMenu is defined and activeMenu == 'evolutionNbTicket') %} active{% endif %}"><a href="{{ path('indicateurs_evolutionNBTicket_homepage') }}">Evolution Nb Ticket</a></li>
                         <li class="{% if (activeMenu is defined and activeMenu == 'contractuel') %} active{% endif %}"><a href="{{ path('indicateurs_contrat_reouverture_incident_homepage') }}">Contractuel</a></li>
-
+                        <li class="{% if (activeMenu is defined and activeMenu == 'help') %} active{% endif %}"><a href="{{ path('indicateurs_help') }}"><span class="glyphicon glyphicon-lamp"></span></a></li>
                     </ul>
                 </div>
             </div>
