--- a/src/IndicateursBundle/Resources/views/Default/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Default/index.html.twig
@@ -9,9 +9,9 @@
             {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Nb de Tickets consommés 2016','id':'supanoforfaitcount2016'} %}
             {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Nb de Tickets consommés 2017','id':'supanoforfaitcount2017'} %}
             {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Nb anomalies réouvertes plus 1 fois','id':'reouvertureanocount'} %}
-            {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Délai Traitements des Ano P1','id':'delaitraitementincident'} %}
+            {#{% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Délai Traitements des Ano P1','id':'delaitraitementincident'} %}
             {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Délai Traitements du Support','id':'delaitraitementsupport'} %}
-            {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Délai Réponse du Support','id':'delaireponsesupport'} %}
+            {% include '@Indicateurs/Default/panel_hp.html.twig' with {'titre': 'Délai Réponse du Support','id':'delaireponsesupport'} %}#}
         </div>
     </div>
     <script type="text/javascript">
@@ -20,9 +20,9 @@
                 getAjaxValue("supanoforfait/count",{year : "2016"},'supanoforfaitcount2016');
                 getAjaxValue("supanoforfait/count",{year : "2017"},'supanoforfaitcount2017');
                 getAjaxValue("contrat/reoinci/count",{year : "2016"},'reouvertureanocount');
-                getAjaxValue("delai/traitement/incident/contrat",{year : "2016"},'delaitraitementincident');
+                /*getAjaxValue("delai/traitement/incident/contrat",{year : "2016"},'delaitraitementincident');
                 getAjaxValue("delai/traitement/support/contrat",{year : "2016"},'delaitraitementsupport');
-                getAjaxValue("delai/reponse/support/contrat",{year : "2016"},'delaireponsesupport');
+                getAjaxValue("delai/reponse/support/contrat",{year : "2016"},'delaireponsesupport');*/
             });
         };
         function getAjaxValue(url,param,id){
