--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,17 +16,13 @@
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="{% if (activeMenu is defined and activeMenu == 'homepage') %} active{% endif %}"><a href="{{ path('indicateurs_homepage') }}">Homepage <span class="sr-only">(current)</span></a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'openclose') %} active{% endif %}"><a href="{{ path('indicateurs_openclose_homepage') }}">Ouvert/Fermé</a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'reouverture') %} active{% endif %}"><a href="{{ path('indicateurs_reouverture_homepage') }}">Réouvertures</a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'evolutionNbTicket') %} active{% endif %}"><a href="{{ path('indicateurs_evolutionNBTicket_homepage') }}">Evolution Nb Ticket</a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'delai') %} active{% endif %}"><a href="{{ path('indicateurs_delai_homepage') }}">Délai</a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'contractuel') %} active{% endif %}"><a href="{{ path('indicateurs_contrat_reouverture_incident_homepage') }}">Contractuel</a></li>
-                        <li class="{% if (activeMenu is defined and activeMenu == 'help') %} active{% endif %}"><a href="{{ path('indicateurs_help') }}"><span class="glyphicon glyphicon-lamp"></span></a></li>
-                    </ul>
-                </div>
+                {#<div class="">#}
+                    {#<ul class="nav navbar-nav">#}
+                        {#<li class="{% if (activeMenu is defined and activeMenu == 'homepage') %} active{% endif %}"><a href="{{ path('indicateurs_homepage') }}">Indicateurs</a></li>#}
+                        {#<li class="{% if (activeMenu is defined and activeMenu == 'homepage') %} active{% endif %}"><a href="{{ path('project_homepage') }}">Projets</a></li>#}
+                    {#</ul>#}
+                {#</div>#}
+                {% block sousmenu %}{% endblock %}
             </div>
         </nav>
         {% block body %}{% endblock %}
