--- a/src/ProjectBundle/Resources/views/Contact/Contacts.html.twig
+++ b/src/ProjectBundle/Resources/views/Contact/Contacts.html.twig
@@ -4,12 +4,30 @@
 
 {% block project_content %}
     <div class="container">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addContact">Ajouter un contact</button>
+        <div class="modal fade" id="addContact" tabindex="-1" role="dialog" aria-labelledby="addContactLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addContactLabel">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                        <button type="button" class="btn btn-primary">Valider</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         {{ table_HTML| raw }}
-        {{ graph_HTML| raw }}
     </div>
 {% endblock %}
 
 {% block project_javascript %}
     {{ table_JS| raw }}
-    {{ graph_JS| raw }}
 {% endblock %}
