--- a/src/ProjectBundle/Resources/views/Contact/Contacts.html.twig
+++ b/src/ProjectBundle/Resources/views/Contact/Contacts.html.twig
@@ -9,17 +9,17 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="addContactLabel">Modal title</h5>
+                        <h5 class="modal-title" id="addContactLabel">Ajouter un contact</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        ...
+                        {{ include ("@Project/Contact/Contact_Form.html.twig") }}
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                        <button type="button" class="btn btn-primary">Valider</button>
+                        <button type="button" class="btn btn-primary" id="submitContact">Valider</button>
                     </div>
                 </div>
             </div>
@@ -30,4 +30,34 @@
 
 {% block project_javascript %}
     {{ table_JS| raw }}
+    <script type="text/javascript">
+        $('#submitContact').on('submit', '.ajaxForm', function (e) {
+
+            e.preventDefault();
+
+            $.ajax({
+                type: $(this).attr('method'),
+                url: $(this).attr('action'),
+                data: $(this).serialize()
+            })
+                .done(function (data) {
+                    if (typeof data.message !== 'undefined') {
+                        alert(data.message);
+                    }
+                })
+                .fail(function (jqXHR, textStatus, errorThrown) {
+                    if (typeof jqXHR.responseJSON !== 'undefined') {
+                        if (jqXHR.responseJSON.hasOwnProperty('form')) {
+                            $('#form_body').html(jqXHR.responseJSON.form);
+                        }
+
+                        $('.form_error').html(jqXHR.responseJSON.message);
+
+                    } else {
+                        alert(errorThrown);
+                    }
+
+                });
+        });
+    </script>
 {% endblock %}
