--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -22,14 +22,28 @@
                     "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
                         $(nTd).html(Math.round(oData.{{ col.data }}/60)+" heures");
                     }
+                    {% elseif ((col.edit is defined)) %},
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span> Modifier</button>"
+                    {% elseif ((col.del is defined)) %},
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-danger del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span> Supprimer</button>"
                     {% endif %} },
                 {% endfor %}
             ],
+
+            {% for col in table.cols %}
+            {% if (col.edit is defined) or (col.del is defined) %}
             "columnDefs": [ {
-                "targets": 0,
+                "searchable": false,
                 "orderable": false,
+                "targets": -1
+            },{
+                "searchable": false,
+                "orderable": false,
+                "targets": -2
             }
             ],
+            {% endif %}
+        {% endfor %}
             "scrollY":        "350px",
             "scrollCollapse": true,
             "paging":         false,
