--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
 
         {% stylesheets output='css/compiled/main.css' filter='cssrewrite'
         'css/global.css'
+        'css/animation.css'
         'css/bootstrap-theme.min.css'
         'css/bootstrap.min.css'%}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
