--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -23,9 +23,9 @@
                         $(nTd).html(Math.round(oData.{{ col.data }}/60)+" heures");
                     }
                     {% elseif ((col.edit is defined)) %},
-                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span> Modifier</button>"
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary btn-sm edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span> Modifier</button>"
                     {% elseif ((col.del is defined)) %},
-                    "defaultContent": "<button type=\"button\" class=\"btn btn-danger del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span> Supprimer</button>"
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-danger btn-sm del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span> Supprimer</button>"
                     {% endif %} },
                 {% endfor %}
             ],
