--- a/src/ProjectBundle/Resources/views/Project/Project_form.html.twig
+++ b/src/ProjectBundle/Resources/views/Project/Project_form.html.twig
@@ -1,4 +1,4 @@
-<form method="POST" action="{{ path('projet_edit',{ 'project':project.id }) }}"  {{ form_enctype(form) }} id="addProjectForm">
+<form method="POST" action="{{ url }}"  {{ form_enctype(form) }} id="projectForm">
     <div class="modal-body">
         <div class="form-group has-feedback {% if (form_errors(form.name) |length > 4) %}has-error{% endif %}">
             {{ form_label(form.name) }} :
@@ -26,6 +26,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-        <button type="submit" class="btn btn-primary" id="submitProject">Valider</button>
+        <a type="submit" class="btn btn-primary" id="submitProject"><div class="ajaxScrollLoader" style="display:none"><div></div></div>Valider</a>
     </div>
 </form>
