--- a/src/ProjectBundle/Resources/views/Contact/Contact_Form.html.twig
+++ b/src/ProjectBundle/Resources/views/Contact/Contact_Form.html.twig
@@ -1,23 +1,31 @@
-<form >
-    <div class="form-group">
-        <label for="nom">Nom :</label>
-        <input type="text" class="form-control" id="nom">
+<form method="POST" action="{{ url }}"  {{ form_enctype(form) }} id="projectForm">
+    <div class="modal-body">
+        <div class="form-group has-feedback {% if (form_errors(form.name) |length > 4) %}has-error{% endif %}">
+            {{ form_label(form.name) }} :
+            {{ form_widget(form.name, { 'attr': {'class': 'form-control'} }) }}
+            {{ form_errors(form.name) }}
+        </div>
+        <div class="form-group has-feedback {% if (form_errors(form.sourcecodeUrl) |length > 4) %}has-error{% endif %}">
+            {{ form_label(form.sourcecodeUrl) }} :
+            {{ form_widget(form.sourcecodeUrl, { 'attr': {'class': 'form-control'} }) }}
+            {{ form_errors(form.sourcecodeUrl) }}
+        </div>
+        <div class="form-group has-feedback {% if (form_errors(form.jtracId) |length > 4) %}has-error{% endif %}">
+            {{ form_label(form.jtracId) }} :
+            {{ form_widget(form.jtracId, { 'attr': {'class': 'form-control'} }) }}
+            {{ form_errors(form.jtracId) }}
+        </div>
+        <div class="form-group has-feedback {% if (form_errors(form.jiraId) |length > 4) %}has-error{% endif %}">
+            {{ form_label(form.jiraId) }} :
+            {{ form_widget(form.jiraId, { 'attr': {'class': 'form-control'} }) }}
+            {{ form_errors(form.jiraId) }}
+        </div>
+        <div class="form-group">
+            {{ form_rest(form) }}
+        </div>
     </div>
-    <div class="form-group">
-        <label for="prenom">Prenom :</label>
-        <input type="text" class="form-control" id="prenom">
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <a type="submit" class="btn btn-primary" id="submitProject"><div class="ajaxScrollLoader" style="display:none"><div></div></div>Valider</a>
     </div>
-    <div class="form-group">
-        <label for="email">Mail :</label>
-        <input type="email" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-        <label for="projet">Projet :</label>
-        <input type="text" class="form-control" id="projet">
-    </div>
-    <div class="form-group">
-        <label for="description">Description :</label>
-        <input type="text" class="form-control" id="description">
-    </div>
-    <button type="submit" class="btn btn-default">Valider</button>
 </form>
