--- a/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
+++ b/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
@@ -3,9 +3,9 @@
 {% block project_title %}Liste des contacts {% endblock %}
 
 {% block project_content %}
-    {{ include('ProjectBundle:global:Content_HTML.html.twig', {'addBtn': 'Ajouter un contact'}) }}
+    {{ include('ProjectBundle:global:Content_HTML.html.twig', {'addBtn': 'Ajouter une activité'}) }}
 {% endblock %}
 
 {% block project_javascript %}
-    {{ include('ProjectBundle:global:Content_JS.html.twig', {'cat': 'contact'}) }}
+    {{ include('ProjectBundle:global:Content_JS.html.twig', {'cat': 'activity'}) }}
 {% endblock %}
