--- a/src/ProjectBundle/Resources/views/Default/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Default/Project.html.twig
@@ -19,9 +19,11 @@
 {% block sousmenu %}
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li class="{% if (activeMenu is defined and activeMenu == 'homepage') %} active{% endif %}"><a href="{{ path('project_homepage') }}">Homepage <span class="sr-only">(current)</span></a></li>
-            <li class="{% if (activeMenu is defined and activeMenu == 'contact') %} active{% endif %}"><a href="{{ path('contact_index') }}">Contact</a></li>
-            <li class="{% if (activeMenu is defined and activeMenu == 'project') %} active{% endif %}"><a href="{{ path('projet_index') }}">Projet</a></li>
+            <li class="{% if (activeMenu is defined and activeMenu == 'activity') %} active{% endif %}"><a href="{{ path('activity_index') }}">Activité</a></li>
+            <li class="{% if (activeMenu is defined and activeMenu == 'project') %} active{% endif %}"><a href="{{ path('project_index') }}">Projets</a></li>
+            <li class="{% if (activeMenu is defined and activeMenu == 'contact') %} active{% endif %}"><a href="{{ path('contact_index') }}">Contacts</a></li>
+            <li class="{% if (activeMenu is defined and activeMenu == 'environnement') %} active{% endif %}"><a href="{{ path('environnement_index') }}">Environnements</a></li>
+
         </ul>
     </div>
 {% endblock %}
@@ -51,8 +53,7 @@
         '@IndicateursBundle/Resources/public/js/datetime-moment.js'
         '@IndicateursBundle/Resources/public/js/highcharts.js'
         '@IndicateursBundle/Resources/public/js/modules/exporting.js'
-        '@ProjectBundle/Resources/public/js/manage_form.js'
-        '@FOSJsRoutingBundle/Resources/js/router.js'%}
+        '@ProjectBundle/Resources/public/js/manage_form.js'%}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
