--- a/src/ProjectBundle/Resources/views/Project/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Project/Project.html.twig
@@ -3,124 +3,9 @@
 {% block project_title %}Liste des projets {% endblock %}
 
 {% block project_content %}
-    <div class="container">
-        <nav class="navbar navbar-light bg-light">
-            <form class="form-inline">
-                <button type="button" class="btn btn-primary" id="addProject"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Ajouter un projet</button>
-            </form>
-        </nav>
-        <div class="modal fade" id="addProjectModal" tabindex="-1" role="dialog" aria-labelledby="addProjectLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                </div>
-            </div>
-        </div>
-        {{ table_HTML| raw }}
-    </div>
+    {{ include('ProjectBundle:global:Content_HTML.html.twig', {'addBtn': 'Ajouter un projet'}) }}
 {% endblock %}
 
 {% block project_javascript %}
-    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-    <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
-    {{ table_JS| raw }}
-    <script type="text/javascript">
-        $(document).on('click','.edit-row',function(){
-            var that = this;
-            var url = Routing.generate('projet_edit', {'id': that.parentNode.parentNode.id});
-            $(that).find("span").addClass("slideInLeft");
-            createProjectForm(url,"GET");
-        });
-        $(document).on('click','.del-row',function(){
-            var that = this;
-            var url = Routing.generate('projet_delete', {'id': that.parentNode.parentNode.id});
-            $(that).find("span").addClass("rotate");
-            createProjectForm(url,"DELETE");
-        });
-        $(document).on('click','#addProject',function(){
-            var url = Routing.generate('projet_new');
-            createProjectForm(url,"GET");
-        });
-        $(document).on('click','#submitProject',function(){
-            $('#projectForm').submit();
-        });
-
-
-        function createProjectForm(url,type){
-            $(".slideInLeft").removeClass("slideInLeft");
-            $.ajax({
-                type: type,
-                url: url
-            })
-                .done(function (data) {
-                    if (typeof data.message !== 'undefined') {
-                        $('.modal-content').html(data.form);
-                        submitProjectForm();
-                        $('#addProjectModal').modal('show');
-                    }
-                })
-                .fail(function (jqXHR, textStatus, errorThrown) {
-                    if (typeof jqXHR.responseJSON !== 'undefined') {
-                        if (jqXHR.responseJSON.hasOwnProperty('form')) {
-                            $('#form_body').html(jqXHR.responseJSON.form);
-                        }
-
-                        $('.form_error').html(jqXHR.responseJSON.message);
-
-                    } else {
-                        alert(errorThrown);
-                    }
-
-                });
-        }
-
-        function submitProjectForm(){
-            $('#projectForm').submit(function (e) {
-                e.preventDefault();
-
-                $('.ajaxScrollLoader').show();
-                $.ajax({
-                    type: $(this).attr('method'),
-                    url: $(this).attr('action'),
-                    data: $(this).serialize()
-                })
-                    .done(function (data) {
-                        if (typeof data.message !== 'undefined') {
-                            var projectTable = $('#projectTable').DataTable();
-                            if(data.type === 'edit'){
-                                projectTable.ajax.reload();
-                                $('#addProjectModal').modal('hide');
-                                $(".ajaxScrollLoader").hide()
-                            }else if(data.type === 'delete'){
-                                projectTable.ajax.reload();
-                                $('#addProjectModal').modal('hide');
-                            }else{
-                                projectTable.row.add( {
-                                    "name": $('#projectbundle_project_name').val(),
-                                    "sourcecodeUrl": $('#projectbundle_project_sourcecodeUrl').val(),
-                                    "jtracId": $('#projectbundle_project_jtracId').val(),
-                                    "jiraId": $('#projectbundle_project_jiraId').val()
-                                } ).draw( false );
-                                $('#addProjectModal').modal('hide');
-                                $('#projectForm')[0].reset();
-                                $(".ajaxScrollLoader").hide()
-                            }
-                        }
-                    })
-                    .fail(function (jqXHR, textStatus, errorThrown) {
-                        $(".ajaxScrollLoader").hide()
-                        if (typeof jqXHR.responseJSON !== 'undefined') {
-                            if (jqXHR.responseJSON.hasOwnProperty('form')) {
-                                $('#form_body').html(jqXHR.responseJSON.form);
-                            }
-
-                            $('.form_error').html(jqXHR.responseJSON.message);
-
-                        } else {
-                            alert(errorThrown);
-                        }
-
-                    });
-                });
-        }
-    </script>
+    {{ include('ProjectBundle:global:Content_JS.html.twig', {'cat': 'project'}) }}
 {% endblock %}
