--- a/src/ProjectBundle/Resources/views/global/Content_form_delete.html.twig
+++ b/src/ProjectBundle/Resources/views/global/Content_form_delete.html.twig
@@ -1,4 +1,4 @@
-<form method="POST" action="{{ url }}"  {{ form_enctype(form) }} id="projectForm">
+<form method="DELETE" action="{{ url }}"  {{ form_enctype(form) }} id="projectForm">
     <div class="modal-body">
         <div class="form-group has-feedback">
             <div class="panel panel-default">
