--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -22,28 +22,22 @@
                     "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
                         $(nTd).html(Math.round(oData.{{ col.data }}/60)+" heures");
                     }
+                    {% elseif ((col.com is defined)) %},
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary btn-sm com-row\" ><span class=\"glyphicon glyphicon-plus\" aria-hidden=\"true\"></span></button>"
                     {% elseif ((col.edit is defined)) %},
-                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary btn-sm edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span> Modifier</button>"
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-primary btn-sm edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span></button>"
                     {% elseif ((col.del is defined)) %},
-                    "defaultContent": "<button type=\"button\" class=\"btn btn-danger btn-sm del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span> Supprimer</button>"
-                    {% endif %} },
+                    "defaultContent": "<button type=\"button\" class=\"btn btn-danger btn-sm del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span></button>"
+                    {% endif %}
+                    {% if(col.width is defined) %},"width": "{{ col.width }}"{% endif %}
+                    {% if(col.visible is defined) %},"visible": "{{ col.visible }}"{% endif %}
+                    {% if(col.center is defined) %},"className":"dt-center"{% endif %}
+                    {% if(col.searchable is defined) %},"searchable":false{% endif %}
+                    {% if(col.orderable is defined) %},"orderable":false{% endif %}
+                },
                 {% endfor %}
             ],
 
-            {% for col in table.cols %}
-            {% if (col.edit is defined) or (col.del is defined) %}
-            "columnDefs": [ {
-                "searchable": false,
-                "orderable": false,
-                "targets": -1
-            },{
-                "searchable": false,
-                "orderable": false,
-                "targets": -2
-            }
-            ],
-            {% endif %}
-        {% endfor %}
             "scrollY":        "350px",
             "scrollCollapse": true,
             "paging":         false,
