--- a/src/ProjectBundle/Resources/views/Default/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Default/Project.html.twig
@@ -11,7 +11,8 @@
         '@IndicateursBundle/Resources/public/css/jquery.dataTables.min.css'
         '@IndicateursBundle/Resources/public/css/buttons.bootstrap.min.css'
         '@IndicateursBundle/Resources/public/css/buttons.dataTables.min.css'
-        '@IndicateursBundle/Resources/public/css/dataTables.bootstrap.min.css'%}
+        '@IndicateursBundle/Resources/public/css/dataTables.bootstrap.min.css'
+        'css/bootstrap-datepicker.min.css'%}
     <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
     {% endstylesheets %}
 {% endblock %}
@@ -53,7 +54,9 @@
         '@IndicateursBundle/Resources/public/js/datetime-moment.js'
         '@IndicateursBundle/Resources/public/js/highcharts.js'
         '@IndicateursBundle/Resources/public/js/modules/exporting.js'
-        '@ProjectBundle/Resources/public/js/manage_form.js'%}
+        '@ProjectBundle/Resources/public/js/manage_form.js'
+        'js/bootstrap-datepicker.min.js'
+        'js/bootstrap-datepicker.fr.min.js'%}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
