--- a/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
+++ b/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
@@ -15,5 +15,12 @@
             $(that).find("span").addClass("slideInLeft");
             createForm(url,"GET");
         });
+        $(document).on('click','.ac-row',function(){
+            var that = this;
+            var id = that.parentNode.id.replace('detailled-row-','');
+            var url = Routing.generate('activitycomment_edit', {'id': id});
+            $(that).find("span").addClass("slideInLeft");
+            createForm(url,"GET");
+        });
     </script>
 {% endblock %}
