--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -28,11 +28,12 @@
                     "defaultContent": "<button type=\"button\" class=\"btn btn-primary btn-sm edit-row\"><span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></span></button>"
                     {% elseif ((col.del is defined)) %},
                     "defaultContent": "<button type=\"button\" class=\"btn btn-danger btn-sm del-row\" ><span class=\"glyphicon glyphicon-remove\" aria-hidden=\"true\"></span></button>"
+                    {% elseif ((col.detail is defined)) %},
+                    "defaultContent": "<span class=\"glyphicon glyphicon-download\" aria-hidden=\"true\"></span>"
                     {% endif %}
-                    {% if(col.detail is defined) %},"className": "details-control","defaultContent": ''{% endif %}
                     {% if(col.width is defined) %},"width": "{{ col.width }}"{% endif %}
                     {% if(col.visible is defined) %},"visible": "{{ col.visible }}"{% endif %}
-                    {% if(col.center is defined) %},"className":"dt-center"{% endif %}
+                    {% if(col.class is defined) %},"className": "{{ col.class }}"{% endif %}
                     {% if(col.searchable is defined) %},"searchable":false{% endif %}
                     {% if(col.orderable is defined) %},"orderable":false{% endif %}
                 },
@@ -81,4 +82,47 @@
         } );
     }
     addLoadEvent(getTable{{ table.id }});
+    $('#{{ table.id }}').on('click','td.detail-row',function(){
+        var that = this;
+        var activityID = that.parentNode.id;
+        var tr = $(that).closest('tr');
+        var DataTable = $('#{{ table.id }}').DataTable();
+        var row = DataTable.row( tr );
+        if ( row.child.isShown() ) {
+            row.child.hide();
+            $(that).find("span").removeClass("rotate");
+            $(that).find("span").removeClass("rotateinverse90");
+        }else{
+            $(that).find("span").addClass("rotate");
+            var url = Routing.generate('activitycomment_list', {'id': activityID});
+            var type = 'GET';
+            $(that).find("span").addClass("rotateinverse90");
+            getDetail(type,url,row);
+        }
+
+    });
+    function getDetail(type,url,row){
+        if (url === false || typeof url === 'undefined') return;
+
+        $.ajax({
+            type: type,
+            url: url
+        })
+            .done(function (data) {
+                if (typeof data.message !== 'undefined') {
+                    if(data.type === 'list'){
+                        $(".rotate").removeClass("rotate");
+                        row.child( data.list ).show();
+                    }
+                }
+                return "<div class=\"alert alert-danger\" role=\"alert\">Un problème est survenue</div>"
+            })
+            .fail(function (jqXHR, textStatus, errorThrown) {
+                if (typeof jqXHR.responseJSON !== 'undefined') {
+                    return data.message;
+                } else {
+                    alert(errorThrown);
+                }
+            });
+    }
 </script>
