--- a/src/ProjectBundle/Resources/views/ActivityComment/ActivityComment_form.html.twig
+++ b/src/ProjectBundle/Resources/views/ActivityComment/ActivityComment_form.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group has-feedback {% if (form_errors(form.dateCreation) |length > 4) %}has-error{% endif %}">
             {{ form_label(form.dateCreation) }} :
-            {{ form_widget(form.dateCreation, { 'attr': {'class': 'form-control js-datepicker'} }) }}
+            {{ form_widget(form.dateCreation, { 'attr': {'class': 'form-control form_datetime'} }) }}
             {{ form_errors(form.dateCreation) }}
         </div>
         <div class="form-group">
