--- a/src/ProjectBundle/Resources/views/Default/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Default/Project.html.twig
@@ -12,7 +12,8 @@
         '@IndicateursBundle/Resources/public/css/buttons.bootstrap.min.css'
         '@IndicateursBundle/Resources/public/css/buttons.dataTables.min.css'
         '@IndicateursBundle/Resources/public/css/dataTables.bootstrap.min.css'
-        'css/bootstrap-datepicker.min.css'%}
+        'css/bootstrap-datepicker.min.css'
+        'css/bootstrap-datetimepicker.min.css'%}
     <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
     {% endstylesheets %}
 {% endblock %}
@@ -55,6 +56,8 @@
         '@IndicateursBundle/Resources/public/js/highcharts.js'
         '@IndicateursBundle/Resources/public/js/modules/exporting.js'
         '@ProjectBundle/Resources/public/js/manage_form.js'
+        'js/bootstrap-datetimepicker.min.js'
+        'js/bootstrap-datetimepicker.fr.js'
         'js/bootstrap-datepicker.min.js'
         'js/bootstrap-datepicker.fr.min.js'%}
     <script type="text/javascript" src="{{ asset_url }}"></script>
