--- a/web/css/animation.css
+++ b/web/css/animation.css
@@ -76,4 +76,8 @@
         opacity: 0;
     }
 }
-×
+.rotateinverse90{
+    -ms-transform: rotate(7deg);
+    -webkit-transform: rotate(7deg);
+    transform: rotate(-90deg);
+}
